fixed problem with dockercompose mysql connectivity